packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/multiple-errors/prisma/schema/Blog.prisma
model Blog {
    id          Int  @id
    viewCount20 Int
    ownerId     Int
    owner       User 
}
